5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1585_1017.log
== TEST (2019-03-27 12:39:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371,01

d = R*(acos())*(sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(loga-logb))
print(d)
-- ERROR:
File "XXXX", line 9
    R = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:41:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
lata = math.radians(float(input("Latitude de P1: ")))
longa = math.radians(float(input("Longitude de P1: ")))
latb = math.radians(float(input("Latitude de P2: ")))
longb = math.radians(float(input("Longitude de P2: ")))
R = 6371,01

d = R*(math.acos())*(math.sin(lata)*math.sin(latb)+math.cos(lata)*math.cos(latb)*math.cos(loga-logb))
print(d)
-- ERROR:
File "XXXX", line 9
    R = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:42:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
lata = math.radians(float(input("Latitude de P1: ")))
longa = math.radians(float(input("Longitude de P1: ")))
latb = math.radians(float(input("Latitude de P2: ")))
longb = math.radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*(math.acos())*(math.sin(lata)*math.sin(latb)+math.cos(lata)*math.cos(latb)*math.cos(loga-logb))
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*(math.acos())*(math.sin(lata)*math.sin(latb)+math.cos(lata)*math.cos(latb)*math.cos(loga-logb))
TypeError: acos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:42:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*(acos())*(sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(loga-logb))
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*(acos())*(sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(loga-logb))
TypeError: acos() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:45:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*(acos(*(sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(loga-logb))))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*(acos(*(sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(loga-logb))))
NameError: name 'loga' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:48:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*acos(*(sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(longa-longb)))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*acos(*(sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(longa-longb)))
TypeError: acos() argument after * must be an iterable, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:53:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*(lata.sin()*latb.sin()+lata.cos()*latb.cos()*(longa-longb).cos).acos()
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*(lata.sin()*latb.sin()+lata.cos()*latb.cos()*(longa-longb).cos).acos()
AttributeError: 'float' object has no attribute 'sin'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:56:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*(sin(lata)
		 #*latb.sin()+lata.cos()*latb.cos()*(longa-longb).cos).acos()
print(round(d))
-- ERROR:
File "XXXX", line 13
    print(round(d))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:57:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*(sin(lata)
		 #*latb.sin()+lata.cos()*latb.cos()*(longa-longb).cos).acos()
print(round(d,4))
-- ERROR:
File "XXXX", line 13
    print(round(d,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:57:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*(sin(lata)
		 #*latb.sin()+lata.cos()*latb.cos()*(longa-longb).cos).acos()
print(round(d,2))
-- ERROR:
File "XXXX", line 13
    print(round(d,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:57:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*(sin(lata)
		 #*latb.sin()+lata.cos()*latb.cos()*(longa-longb).cos).acos()
print(round(d, 2))
-- ERROR:
File "XXXX", line 13
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:57:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*(sin(lata))
		 #*latb.sin()+lata.cos()*latb.cos()*(longa-longb).cos).acos()
print(round(d, 2))
-- OUTPUT:
-337.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:59:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*acos(*(sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(longa-longb)))
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*acos(*(sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(longa-longb)))
TypeError: acos() argument after * must be an iterable, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 12:59:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*acos((sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(longa-longb)))
print(round(d,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 12:59:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
lata = radians(float(input("Latitude de P1: ")))
longa = radians(float(input("Longitude de P1: ")))
latb = radians(float(input("Latitude de P2: ")))
longb = radians(float(input("Longitude de P2: ")))
R = 6371.01

d = R*acos((sin(lata)*sin(latb)+cos(lata)*cos(latb)*cos(longa-longb)))
print(round(d,2))
-- EXECUTION TIME:
0.138371
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
